--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "abilities-js",
   "version": "0.5.0",
   "description": "A core package for managing the authorization through CanCanCan style. With supports of granularity based on Attributes Based Access Control.",
-  "main": "index.js",
+  "source": "src/abilities/core/index.js",
+  "main": "dist/abilities-core/index.js",
+  "module": "dist/abilities-core/module.js",
   "scripts": {
+    "build": "parcel build",
     "test": "vitest"
   },
   "repository": {
@@ -23,6 +26,7 @@
   "homepage": "https://github.com/dicoding-dev/abilities-js#readme",
   "dependencies": {
     "object-deep-compare": "^1.2.0",
+    "parcel": "^2.10.3",
     "vitest": "^1.0.4"
   }
 }
