change to dev dependencies

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "homepage": "https://github.com/dicoding-dev/abilities-js#readme",
   "dependencies": {
-    "object-deep-compare": "^1.2.0",
+    "object-deep-compare": "^1.2.0"
+  },
+  "devDependencies": {
     "parcel": "^2.10.3",
     "vitest": "^1.0.4"
   }
