--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "homepage": "https://github.com/dicoding-dev/abilities-js#readme",
   "dependencies": {
-    "object-deep-compare": "^1.2.0"
+    "object-deep-compare": "^1.2.0",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "parcel": "^2.10.3",
