--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dist/"
   ],
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "rimraf dist && tsc -p tsconfig.json",
     "prepublishOnly": "npm run build",
     "test": "vitest"
   },
